Improved implementation of some pieces of code on all layers of the application ( PART 2)

--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/PosetaPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/PosetaPage.xaml
@@ -56,7 +56,7 @@
                         x:Name="BrojTelefonaPosetioca"
                         ClassId="BrojTelefonaPosetioca"
                         IsVisible="False"
-                        Placeholder="BrojTelefonaPosetioca *"
+                        Placeholder="Broj telefona posetioca *"
                         Text="{Binding BrojTelefonaPosetioca}" />
                     <Label x:Name="BrojTelefonaPosetiocaValidation" />
 
