Added column index for logo on 2 pages

--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/Dialogs/LekarskoUverenjeDialogPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/Dialogs/LekarskoUverenjeDialogPage.xaml
@@ -52,7 +52,10 @@
                         TextColor="{StaticResource LightSmokeWhite}"
                         VerticalOptions="Center" />
 
-                    <Frame BackgroundColor="Transparent" VerticalOptions="FillAndExpand">
+                    <Frame
+                        Grid.Column="1"
+                        BackgroundColor="Transparent"
+                        VerticalOptions="FillAndExpand">
                         <Image Aspect="AspectFill" Source="{StaticResource Logo}" />
                     </Frame>
                 </Grid>
