--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/Dialogs/PregledDialogPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/Dialogs/PregledDialogPage.xaml
@@ -50,7 +50,10 @@
                     TextColor="{StaticResource LightSmokeWhite}"
                     VerticalOptions="Center" />
 
-                <Frame BackgroundColor="Transparent" VerticalOptions="FillAndExpand">
+                <Frame
+                    Grid.Column="1"
+                    BackgroundColor="Transparent"
+                    VerticalOptions="FillAndExpand">
                     <Image Aspect="AspectFit" Source="{StaticResource Logo}" />
                 </Frame>
             </Grid>
